--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -7,5 +7,42 @@
 </head>
 <body>
     <h1>Things I need to do:</h1>
-</body>
+   
+
+        <table>
+        {% for item in items %}
+            <tr>
+            {% if item.done %}
+            <td><strike> {{ item.name }} </strike> </td>
+            {% else %}
+            {{ item.name }}
+            {% endif %}
+            <td>
+                    <a href="/toggle/{{ item.id }}"> 
+                    <button>Toggle</button>
+                    </a>
+            </td>
+
+
+            <td>
+                    <a href="/edit/{{ item.id }}"> 
+                    <button>Edit</button>
+                    </a>
+            </td>
+
+             <td>
+                    <a href="/delete/{{ item.id }}"> 
+                    <button>Delete</button>
+                    </a>
+            </td>
+
+
+        </tr>
+        {% empty %}
+        <tr><td>You have nothing to do</td></tr>
+        {% endfor %}
+        </table>
+
+        <a href="/add">Add an Item</a>
+    </body>
 </html>
